<?xml version="1.0"?>
<package format="3">
  <name>behaviortree_cpp</name>
  <version>4.6.2</version>
  <description>
  This package provides the Behavior Trees core library.
  </description>

  <maintainer email="gregorysarrouf@gmail.com">Gregory Sarrouf</maintainer>

  <license>license</license>

  <author>Gregory Sarrouf</author>

  <build_depend>ros_environment</build_depend>

  <depend condition="$ROS_VERSION == 1">roslib</depend>

  <buildtool_depend condition="$ROS_VERSION == 2">ament_cmake</buildtool_depend>
  <depend condition="$ROS_VERSION == 2">rclcpp</depend>
  <depend condition="$ROS_VERSION == 2">ament_index_cpp</depend>
  <depend condition="$ROS_VERSION == 2">behaviortree_cpp</depend>

  <depend>libsqlite3-dev</depend>
  <depend>libzmq3-dev</depend>

  <test_depend condition="$ROS_VERSION == 2">ament_cmake_gtest</test_depend>

  <export>
      <build_type condition="$ROS_VERSION == 2">ament_cmake</build_type>
  </export>

</package>
